# backend/pkg/handlers/handler_application.go
@@ -5,6 +5,7 @@ import (
 
 	"github.com/ddannyll/prepper/db"
 	"github.com/ddannyll/prepper/pkg/config"
+	"github.com/ddannyll/prepper/pkg/service"
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/session"
 )
@@ -12,12 +13,20 @@ import (
 type ApplicationHandler struct {
 	SessionStore *session.Store
 	dbClient     *db.PrismaClient
+	aiService    *service.AI
 }
 
-func NewApplicationHandler(sessionStore *session.Store, config config.EnvVars, dbClient *db.PrismaClient) *ApplicationHandler {
+func NewApplicationHandler(
+	sessionStore *session.Store,
+	config config.EnvVars,
+	dbClient *db.PrismaClient,
+	aiService *service.AI,
+) *ApplicationHandler {
 	return &ApplicationHandler{
 		SessionStore: sessionStore,
-		dbClient:     dbClient}
+		dbClient:     dbClient,
+		aiService:    aiService,
+	}
 }
 
 type applicationCreateBody struct {
@@ -122,5 +131,78 @@ func (u *ApplicationHandler) ApplicationMe(c *fiber.Ctx) error {
 
 	resp := applications
 
+	return c.JSON(resp)
+}
+
+type applicationQuestionsBody struct {
+	Id              string `json:"id" example:"1337"`
+	NumberQuestions int    `json:"numberQuestions" example:"5"`
+} //@name applicationQuestionsBody
+
+type question struct {
+	QuestionPrompt string   `json:"questionPrompt" example:"What is your name?"`
+	tags           []string `json:"tags" example:"[tag1, tag2, tag3]"`
+} //@name question
+
+// ApplicationQuestions godoc
+//
+// @Summary		Get questoins for the user
+// @description	an application has some properties
+// @Tags			application
+// @Accept			json
+// @Param			applicationQuestionsBody	body applicationQuestionsBody true "Application"
+// @Produce		json
+// @Success		200	{object} GetQuestionsFromJobDescriptionResponse
+// @Router			/application/questions [post]
+func (u *ApplicationHandler) ApplicationQuestions(c *fiber.Ctx) error {
+	userID := c.Locals("userID").(string)
+
+	if userID == "" {
+		log.Println("userID is empty")
+		return fiber.ErrUnauthorized
+	}
+
+	// applications, fetchError := u.dbClient.Application.FindMany(
+	// 	db.Application.Owner.Where(
+	// 		db.User.ID.Equals(userID),
+	// 	),
+	// ).Exec(c.Context())
+
+	var questionBody applicationQuestionsBody
+	if err := parseAndValidateBody(c, &questionBody); err != nil {
+		return err
+	}
+
+	// find the application
+	application, fetchError := u.dbClient.Application.FindUnique(
+		db.Application.ID.Equals(questionBody.Id),
+	).Exec(c.Context())
+
+	log.Println("WHAT IS THE USER ID", userID)
+	log.Println("QID", questionBody.Id)
+
+	if fetchError != nil {
+		return fetchError
+	}
+
+	// get the job description
+	jobDescription := application.JobDescription
+	numberQuestions := questionBody.NumberQuestions
+
+	// if it's more than 5 questions, return an error
+	if numberQuestions > 5 {
+		return fiber.NewError(fiber.StatusBadRequest, "Number of questions must be less than 5")
+	}
+
+	// get the questions
+
+	resp, er := u.aiService.GetQuestionsFromJobDescription(c.Context(), jobDescription, numberQuestions, application.Name)
+
+	if er != nil {
+		return er
+	}
+	// use the job description to get the questions
+
+	log.Println("RESPONSE", resp)
 	return c.JSON(resp)
 }
